syntax = "proto3";
package rofi.messages;

import "jointSetPosWithSpeedCmd.proto";
import "jointSetVelocityCmd.proto";
import "jointSetTorqueCmd.proto";

message JointCmd {
    enum Type {
        GET_MAX_POSITION = 0;
        GET_MIN_POSITION = 1;
        GET_MAX_SPEED = 2;
        GET_MIN_SPEED = 3;
        GET_MAX_TORQUE = 4;
        GET_POSITION = 5;
        GET_VELOCITY = 6;
        GET_TORQUE = 7;
        SET_POS_WITH_SPEED = 8;
        SET_VELOCITY = 9;
        SET_TORQUE = 10;
    }

    int32 joint = 1;
    Type cmdType = 2;

    JointSetPosWithSpeedCmd setPosWithSpeed = 4;
    JointSetVelocityCmd setVelocity = 3;
    JointSetTorqueCmd setTorque = 5;
}
